# Backend-Code-Analysis-Server

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  edupi_visualize.json  main.py  package-lock.json  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: ✅-feature.md  🛠️--fix.md
.github/workflows/: aws.yml  cicd-dev.yml  pull-request-build.yml
app/: main.py  route.py  utils.py
app/analysis/: code_analyzer.py  element_manager.py  highlight.py  models.py  parser.py  parser1.py  step_manager.py
app/analysis/generator/: assign_generator.py  body_generator.py  expr_generator.py  for_generator.py
app/analysis/util/: util.py
app/execute/: executor.py  limit_env.py
app/execute/exception/: code_execute_error.py  code_syntax_error.py  error_enum.py
app/execute/models/: execute_request.py
app/models/: request_code.py
app/visualize/: code_analyzer.py  code_visualizer.py
app/visualize/analysis/: element_manager.py  stmt_traveler.py
app/visualize/container/: element_container.py
app/visualize/generator/: converter_traveler.py  visualization_manager.py  viz_convertor.py
app/visualize/utils/: util.py  utils.py
app/web/: base_exception.py  exception_handler.py  logger.py
app/web/exception/: code_execute_error.py  code_visualize_error.py  error_enum.py
app/web/models/: error_response.py  success_reponse.py
tests/: conftest.py  test_call_parser.py  test_highlight.py  test_parser.py
tests/analysis/: conftest.py
tests/analysis/generator/: test_assign_generator.py  test_for_generator.py
tests/visualize/utils/: test_utils.py
(+181 files in other folders)
