[tool.poetry]
name = "code-analysis-server"
version = "0.1.0"
description = ""
authors = ["GS_song <20003204@sju.ac.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
annotated-types = "0.7.0"
anyio = "4.4.0"
certifi = "2024.7.4"
click = "8.1.7"
dnspython = "2.6.1"
email-validator = "2.1.1"
fastapi = "0.111.0"
fastapi-cli = "0.0.4"
h11 = "0.14.0"
httpcore = "1.0.5"
httptools = "0.6.1"
httpx = "0.27.0"
idna = "3.7"
jinja2 = "3.1.4"
markdown-it-py = "3.0.0"
markupsafe = "2.1.5"
mdurl = "0.1.2"
orjson = "3.10.3"
pydantic = "2.7.3"
pydantic-core = "2.18.4"
pygments = "2.18.0"
python-dotenv = "1.0.1"
python-multipart = "0.0.9"
pyyaml = "6.0.1"
rich = "13.7.1"
shellingham = "1.5.4"
sniffio = "1.3.1"
starlette = "0.37.2"
typer = "0.12.3"
typing-extensions = "4.12.1"
ujson = "5.10.0"
uvicorn = "0.30.1"
uvloop = "0.19.0"
watchfiles = "0.22.0"
websockets = "12.0"
pytest = ">=8.2.2,<8.3.0"
pytest-mock = "^3.14.0"
utils = "^1.0.2"

[tool.black]
line-length = 120

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
black = "^24.4.2"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
